--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,2 @@
-MONGO = mongodb+srv://MohitMehra:mohit@cluster0.seev4rv.mongodb.net/?retryWrites=true&w=majority
+MONGO = mongodb+srv://MohitMehra:mohit@cluster0.seev4rv.mongodb.net/?retryWrites=true&w=majority&dbname=fiverr
+JWT_KEY = g4ujh5fjh4gjh436vf346v365jh
