--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.6",
     "infinite-react-carousel": "^1.2.11",
     "moment": "^2.29.4",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
@@ -45,7 +46,6 @@
   },
   "devDependencies": {
     "eslint": "^8.38.0",
-    "eslint-plugin-react": "^7.32.2",
-    "node-sass": "^8.0.0"
+    "eslint-plugin-react": "^7.32.2"
   }
 }
